--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
-    "jest-location-mock": "^1.0.9"
+    "jest-location-mock": "^1.0.9",
+    "ejs": ">=3.1.7",
+    "async": ">=2.6.4",
+    "nth-check": ">=2.0.1"
   }
 }
